--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "method-override": "^3.0.0",
     "methods": "1.1.2",
     "mongoose": "^5.9.13",
-    "mongoose-unique-validator": "1.0.2",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
