--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
   },
   "rules": {
     "no-underscore-dangle": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "no-param-reassign": 0,
+    "func-names": 0
   }
 }
