--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "newman run ./tests/api-tests.postman.json -e ./tests/env-api-tests.postman.json",
     "stop": "lsof -ti :3000 | xargs kill",
     "mongo:stop": "docker stop realworld-mongo && docker rm realworld-mongo",
-    "lint": "node_modules/.bin/eslint 'src/**/*.*'",
-    "lint:fix": "prettier-eslint --write 'src/**/*.*'"
+    "lint": "node_modules/.bin/eslint './src/**/*.*'",
+    "lint:fix": "node_modules/.bin/eslint './src/**/*.*' --fix"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,6 @@
   },
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "2.7.1",
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
@@ -29,7 +28,6 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "7.1.9",
     "method-override": "^3.0.0",
-    "methods": "1.1.2",
     "mongoose": "^5.9.13",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
